Remove z-index to resolve layering issue

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -18,7 +18,7 @@ body.lockscroll {
   top: 50% !important;
   left: 50% !important;
   transform: translate(-50%, -50%) !important;
-  z-index: 1050 !important;
+  // z-index: 1050 !important;
 }
 
 
